; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/ble/ble_ancs/main/extr_ble_ancs_demo.c_esp_perform_notification_action.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/bluedroid/ble/ble_ancs/main/extr_ble_ancs_demo.c_esp_perform_notification_action.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@CommandIDPerformNotificationAction = common dso_local global i32 0, align 4
@ESP_NOTIFICATIONUID_LEN = common dso_local global i64 0, align 8
@gl_profile_tab = common dso_local global %struct.TYPE_2__* null, align 8
@PROFILE_A_APP_ID = common dso_local global i64 0, align 8
@ESP_GATT_WRITE_TYPE_RSP = common dso_local global i32 0, align 4
@ESP_GATT_AUTH_REQ_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @esp_perform_notification_action(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [600 x i32], align 16
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = bitcast [600 x i32]* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %7, i8 0, i64 2400, i1 false)
  store i64 0, i64* %6, align 8
  %8 = load i32, i32* @CommandIDPerformNotificationAction, align 4
  %9 = getelementptr inbounds [600 x i32], [600 x i32]* %5, i64 0, i64 0
  store i32 %8, i32* %9, align 16
  %10 = load i64, i64* %6, align 8
  %11 = add i64 %10, 1
  store i64 %11, i64* %6, align 8
  %12 = load i64, i64* %6, align 8
  %13 = getelementptr inbounds [600 x i32], [600 x i32]* %5, i64 0, i64 %12
  %14 = load i32*, i32** %3, align 8
  %15 = load i64, i64* @ESP_NOTIFICATIONUID_LEN, align 8
  %16 = call i32 @memcpy(i32* %13, i32* %14, i64 %15)
  %17 = load i64, i64* @ESP_NOTIFICATIONUID_LEN, align 8
  %18 = load i64, i64* %6, align 8
  %19 = add i64 %18, %17
  store i64 %19, i64* %6, align 8
  %20 = load i32, i32* %4, align 4
  %21 = load i64, i64* %6, align 8
  %22 = getelementptr inbounds [600 x i32], [600 x i32]* %5, i64 0, i64 %21
  store i32 %20, i32* %22, align 4
  %23 = load i64, i64* %6, align 8
  %24 = add i64 %23, 1
  store i64 %24, i64* %6, align 8
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** @gl_profile_tab, align 8
  %26 = load i64, i64* @PROFILE_A_APP_ID, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i64 %26
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** @gl_profile_tab, align 8
  %31 = load i64, i64* @PROFILE_A_APP_ID, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i64 %31
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = load %struct.TYPE_2__*, %struct.TYPE_2__** @gl_profile_tab, align 8
  %36 = load i64, i64* @PROFILE_A_APP_ID, align 8
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i64 %36
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load i64, i64* %6, align 8
  %41 = getelementptr inbounds [600 x i32], [600 x i32]* %5, i64 0, i64 0
  %42 = load i32, i32* @ESP_GATT_WRITE_TYPE_RSP, align 4
  %43 = load i32, i32* @ESP_GATT_AUTH_REQ_NONE, align 4
  %44 = call i32 @esp_ble_gattc_write_char(i32 %29, i32 %34, i32 %39, i64 %40, i32* %41, i32 %42, i32 %43)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @memcpy(i32*, i32*, i64) #2

declare dso_local i32 @esp_ble_gattc_write_char(i32, i32, i32, i64, i32*, i32, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
